# Gen-AS

./: .gitignore  LICENSE  README.md  build.py  config.yaml  environment.yaml  pyproject.toml
dggi/: utils.py
dggi/cli/: app.py
dggi/generator/: eval_utils.py  evaluation.py  loading.py  metrics.py  mlf_utils.py  model.py  preprocessing.py  train_utils.py  training.py
dggi/gui/: app.py  app_settings.py  global_config.py  resources_rc.py  ui_functions.py  ui_main.py  ui_vis.py  ui_vis_eval.py  wevaluate.py  wgenerate.py  wtrain.py
dggi/gui/modules/: __init__.py
dggi/gui/raw_uis/: main.ui  resources.qrc  vis.ui  vis_eval.ui
dggi/gui/themes/: py_dracula_dark.qss
digg/: utils.py
digg/cli/: app.py
digg/generator/: eval_utils.py  evaluation.py  graph_utils.py  loading.py  metrics.py  mlf_utils.py  model.py  preprocessing.py  train_utils.py  training.py
digg/gui/: main.py  main.ui  resources.qrc
digg/gui/modules/: __init__.py  app_functions.py  app_settings.py  resources_rc.py  ui_functions.py  ui_main.py  wtest.py  wtrain.py
digg/gui/old_app/: app.py  test.py  traintab.py  utils.py
mlruns/0/: meta.yaml
