[tool.poetry]
name = "digg"
version = "0.1.0"
description = ""
authors = ["Caio Dadauto <caiodadauto@gmail.com>"]
readme = "README.md"
build = 'build.py'

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^1.5.2"
seaborn = "^0.12.1"
networkx = "^2.8.8"
prettytable = "^3.5.0"
click = "^8.1.3"
mlflow = "^2.0.1"
hydra-core = "^1.2.0"
tqdm = "^4.64.1"
joblib = "^1.2.0"
pyemd = "^0.5.1"
numpy = "1.23.5"
torch = "1.13.0"
conda-lock = "1.2.1"

[tool.poetry.scripts]
digg = "digg.cli.app:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
